# DeepDataMiningLearning

./: .gitignore  .readthedocs.yaml  Bigquery-COVID.ipynb  CMPE-Tensorflow1.ipynb  CMPE-pytorch1.ipynb  CMPE_pytorch1.ipynb  Dataintro-EDA.ipynb  Dataintro.ipynb  MLIntro2-classification.ipynb  Python-Numpy.ipynb  README.md  english_words.txt  evalresults.json  pyproject.toml  requirements.txt
DeepDataMiningLearning/: DeepMIMOdata.py  Pytorch-HPC.ipynb  Pytorch-models.ipynb  ViTHPC.ipynb  __init__.py  clip.ipynb  hfaudiomain.py  hfaudiomain2.py  hfaudiomain_seq.py  hfimage.py  hfvision_inference.py  hfvisionmain.py  huggingfaceimage.ipynb  imagenet.py  inference.py  learningrate.ipynb  mmdet3d_train.py  multiGPU.py  networkutil.py  pointcloud.py  printmodel.py  siamese_network.py  singleGPU.py  symboldetection.ipynb  symboldetection2.ipynb  testTorchDDP.py  testtimm.ipynb  torchdata.py  torchhubmodel.py  torchvision.ipynb  torchvisionHPC.ipynb  torchvisionvitHPC.ipynb  visionutil.py
dataapps/: fastapipdf.py  fastapitest.py  gradio_asr.py  gradio_chat.py  gradio_image.py  gradio_openai.py  gradio_translate.py  gradiotest.py  mylangchain.py  mylangchainagent.py  openai_embedding_utils.py  openaiapi.py  openaiapi_imaggen.py  openaiqa.ipynb  pineconetest.py  pptxextraction.py  streamlit_langchain.py  streamlit_langchainbasic.py  streamlit_langchainchroma.py  streamlit_langchainsummarize.py  streamlit_pandasai.py  streamlittest.py  vlm_base.py  vlm_gradio  vlm_gradio_ui.py  vlm_model.py  webcrawl.ipynb
docker/: Dockerfile  Dockerfile.ros2humble  Dockerfile.ubuntu22cu117  (+14 more)
(+774 files in other folders)
